--- a/Image Map 2/Properties/Resources.resx
+++ b/Image Map 2/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="item_frame" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\item_frame.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="image_map_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image_map_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
